<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroungTrangChu">

    <include
        layout="@layout/layout_toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:drawableTop="@drawable/ic_camera"
                android:text="@string/taianh"
                android:background="@color/colorBlack"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:padding="5dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:drawableTop="@drawable/ic_location"
                android:text="@string/checkin"
                android:background="@color/colorBlack"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:padding="5dp"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:drawableTop="@drawable/ic_comment"
                android:text="@string/binhluan"
                android:background="@color/colorBlack"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:padding="5dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:drawableTop="@drawable/ic_bookmark"
                android:text="@string/luulai"
                android:background="@color/colorBlack"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:padding="5dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:drawableTop="@drawable/ic_share"
                android:text="@string/chiase"
                android:background="@color/colorBlack"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:padding="5dp"
                />

        </LinearLayout>
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestScrollViewChiTiet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorAccent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageHinhAnh"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/hinhtest" />

                    <TextView
                        android:id="@+id/txtTenQuanAn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Googi House"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:paddingTop="5dp"
                        android:paddingLeft="10dp"/>

                    <TextView
                        android:id="@+id/txtDiaChiQuanAn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="36 Quan Trung"
                        android:textColor="@color/colorBlack"
                        android:paddingLeft="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#555A5F"
                        android:layout_marginTop="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/TongSoHinhAnh"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold"/>

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/taianh"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/TongSoCheckin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/checkin"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/TongSoBinhLuan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold"/>

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/binhluan"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/TongSoLuuLai"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/luulai"
                                />


                        </LinearLayout>


                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#555A5F"
                        android:layout_marginTop="10dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtThoiGianHoatDong"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="7:00 - 23:00"
                            android:textColor="#E91E63"
                            android:layout_marginTop="10dp"/>
                        <TextView
                            android:id="@+id/txtTrangThaiHoatDong"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Chưa mở cửa"
                            android:layout_marginRight="5dp"
                            android:textStyle="bold"
                            android:textSize="18dp"
                            android:textColor="#03A9F4"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>

                </LinearLayout>

                <include
                    layout="@layout/layout_tinhnang_chitietquanan"
                    />
                <include
                    layout="@layout/layout_binhluan_chitietquanan"
                    />
            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>